--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=a677831c625ace9451d8d38e92f0aa03
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a MySQL database, use: "mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:password@127.0.0.1:3306/ydays"
 ###< doctrine/doctrine-bundle ###
