--- a/.env
+++ b/.env
@@ -21,7 +21,9 @@ APP_SECRET=a677831c625ace9451d8d38e92f0aa03
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILGUN_KEY=api-key
+MAILGUN_DOMAIN=mail-gun-domain
+MAILER_DSN=mailgun+https://$MAILGUN_KEY:$MAILGUN_DOMAIN@default
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -31,3 +33,8 @@ APP_SECRET=a677831c625ace9451d8d38e92f0aa03
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL="mysql://root:password@127.0.0.1:3306/ydays"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailgun-mailer ###
+# MAILER_DSN=mailgun://KEY:DOMAIN@default?region=us
+# MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
+###< symfony/mailgun-mailer ###
